test/Macros/CodiraifyImport/MacroErrors/UnexpectedPointerType.code
// REQUIRES: language_language_parser

// RUN: %target-typecheck-verify-language -language-version 5 -module-name main -disable-availability-checking -typecheck -plugin-path %language-plugin-dir -verify

// expected-error@+2{{expected Unsafe[Mutable][Raw]Pointer type for type CInt - first type token is 'CInt'}}
@_CodiraifyImport(.countedBy(pointer: .param(1), count: "len"))
fn myFunc(_ ptr: CInt, _ len: CInt) {
}
// expected-error@+2{{expected Unsafe[Mutable][Raw]Pointer type for type UnsafeBufferPointer<CInt> - first type token is 'UnsafeBufferPointer'}}
@_CodiraifyImport(.countedBy(pointer: .param(1), count: "len"))
fn myFunc2(_ ptr: UnsafeBufferPointer<CInt>, _ len: CInt) {
}
